--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,23 @@
 {
   "name": "inventory-backend",
   "version": "1.0.0",
-  "description": "Backend for Inventory Management System",
+  "description": "Inventory Management System Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "inventory",
-    "management",
-    "express",
-    "mysql"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-rate-limit": "^6.10.0",
-    "helmet": "^7.2.0",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.14.4"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.2"
   }
 }
